[gd_scene load_steps=40 format=2]

[ext_resource path="res://scripts/fase 2/Fase fios.gd" type="Script" id=1]
[ext_resource path="res://sprites/firework.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 576, 192, 192 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 576, 192, 192 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 576, 192, 192 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 576, 192, 192 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 576, 192, 192 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 768, 192, 192 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 768, 192, 192 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 768, 192, 192 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 768, 192, 192 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 768, 192, 192 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 960, 192, 192 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 960, 192, 192 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 960, 192, 192 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 960, 192, 192 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 960, 192, 192 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1152, 192, 192 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 1152, 192, 192 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 1152, 192, 192 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 1152, 192, 192 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 1152, 192, 192 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1344, 192, 192 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 1344, 192, 192 )

[sub_resource type="SpriteFrames" id=37]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "run",
"speed": 20.0
} ]

[node name="Fase fios" type="Node2D"]
script = ExtResource( 1 )

[node name="Fundo" type="Node" parent="."]

[node name="fundo" type="ColorRect" parent="Fundo"]
margin_right = 360.0
margin_bottom = 640.0
color = Color( 0.294118, 0.294118, 0.294118, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Fundo"]
margin_left = 45.5
margin_top = 20.0
margin_right = 314.5
margin_bottom = 51.0
text = "Ligue os fios nos valores correspondentes
para não cometar a corrupção"
align = 1
valign = 1

[node name="caixa" type="ColorRect" parent="Fundo"]
margin_left = 20.0
margin_top = 100.0
margin_right = 340.0
margin_bottom = 420.0
color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="corR" type="ColorRect" parent="Fundo"]
margin_left = 20.0
margin_top = 77.0
margin_right = 34.0
margin_bottom = 91.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Fundo/corR"]
margin_left = 15.0
margin_right = 55.0
margin_bottom = 14.0
text = " > 200MB"

[node name="corY" type="ColorRect" parent="Fundo"]
margin_left = 105.0
margin_top = 77.0
margin_right = 119.0
margin_bottom = 91.0
color = Color( 1, 0.984314, 0, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Fundo/corY"]
margin_left = 15.0
margin_right = 55.0
margin_bottom = 14.0
text = " > 400MB"

[node name="Fire" type="AnimatedSprite" parent="Fundo"]
visible = false
position = Vector2( 119, 159 )
scale = Vector2( 1.29688, 1.28125 )
frames = SubResource( 37 )
animation = "run"
frame = 21
playing = true

[node name="Fire2" type="AnimatedSprite" parent="Fundo"]
visible = false
position = Vector2( 258, 309 )
scale = Vector2( 1.29688, 1.28125 )
frames = SubResource( 37 )
animation = "run"
frame = 20
playing = true

[node name="Fire3" type="AnimatedSprite" parent="Fundo"]
visible = false
position = Vector2( 81, 414 )
scale = Vector2( 1.29688, 1.28125 )
frames = SubResource( 37 )
animation = "run"
frame = 19
playing = true

[node name="corB" type="ColorRect" parent="Fundo"]
margin_left = 189.0
margin_top = 77.0
margin_right = 203.0
margin_bottom = 91.0
color = Color( 0, 0.0862745, 1, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Fundo/corB"]
margin_left = 15.0
margin_right = 55.0
margin_bottom = 14.0
text = " > 500MB"

[node name="corW" type="ColorRect" parent="Fundo"]
margin_left = 275.0
margin_top = 77.0
margin_right = 289.0
margin_bottom = 91.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Fundo/corW"]
margin_left = 15.0
margin_right = 55.0
margin_bottom = 14.0
text = " > 1GB"

[node name="Connecteds" type="Node" parent="Fundo"]

[node name="ConnectRed" type="ColorRect" parent="Fundo/Connecteds"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 45.0
margin_top = 122.0
margin_right = 423.0
margin_bottom = 138.0
rect_rotation = 44.3964
color = Color( 1, 0, 0, 1 )

[node name="ConnectYellow" type="ColorRect" parent="Fundo/Connecteds"]
visible = false
margin_left = 45.0
margin_top = 206.0
margin_right = 340.0
margin_bottom = 222.0
rect_rotation = 22.8333
color = Color( 1, 0.984314, 0, 1 )

[node name="ConnectBlue" type="ColorRect" parent="Fundo/Connecteds"]
visible = false
margin_left = 43.0
margin_top = 293.0
margin_right = 336.0
margin_bottom = 309.0
rect_rotation = -21.8211
color = Color( 0, 0.0862745, 1, 1 )

[node name="ConnectWhite" type="ColorRect" parent="Fundo/Connecteds"]
visible = false
margin_left = 38.0
margin_top = 384.0
margin_right = 418.0
margin_bottom = 400.0
rect_rotation = -44.5892

[node name="erros" type="Node" parent="."]

[node name="vida11" type="ColorRect" parent="erros"]
margin_left = 183.0
margin_top = 441.0
margin_right = 192.0
margin_bottom = 498.0
rect_rotation = -30.0
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="vida12" type="ColorRect" parent="erros"]
margin_left = 213.0
margin_top = 436.0
margin_right = 222.0
margin_bottom = 496.0
rect_rotation = 30.0
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="vida21" type="ColorRect" parent="erros"]
margin_left = 243.0
margin_top = 440.0
margin_right = 252.0
margin_bottom = 497.0
rect_rotation = -30.0
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="vida22" type="ColorRect" parent="erros"]
margin_left = 273.0
margin_top = 435.0
margin_right = 282.0
margin_bottom = 495.0
rect_rotation = 30.0
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="vida31" type="ColorRect" parent="erros"]
margin_left = 303.0
margin_top = 440.0
margin_right = 312.0
margin_bottom = 497.0
rect_rotation = -30.0
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="vida32" type="ColorRect" parent="erros"]
margin_left = 333.0
margin_top = 435.0
margin_right = 342.0
margin_bottom = 495.0
rect_rotation = 30.0
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="Fios" type="Node" parent="."]

[node name="F_red" type="ColorRect" parent="Fios"]
margin_left = 20.0
margin_top = 120.0
margin_right = 50.0
margin_bottom = 140.0
color = Color( 1, 0, 0, 1 )

[node name="Red" type="Button" parent="Fios/F_red"]
margin_left = 12.0
margin_right = 24.0
margin_bottom = 20.0

[node name="F_yellow" type="ColorRect" parent="Fios"]
margin_left = 20.0
margin_top = 205.0
margin_right = 50.0
margin_bottom = 225.0
color = Color( 1, 0.984314, 0, 1 )

[node name="Yellow" type="Button" parent="Fios/F_yellow"]
margin_left = 12.0
margin_right = 24.0
margin_bottom = 20.0

[node name="F_blue" type="ColorRect" parent="Fios"]
margin_left = 20.0
margin_top = 290.0
margin_right = 50.0
margin_bottom = 310.0
color = Color( 0, 0.0862745, 1, 1 )

[node name="Blue" type="Button" parent="Fios/F_blue"]
margin_left = 12.0
margin_right = 24.0
margin_bottom = 20.0

[node name="F_white" type="ColorRect" parent="Fios"]
margin_left = 20.0
margin_top = 375.0
margin_right = 50.0
margin_bottom = 395.0

[node name="White" type="Button" parent="Fios/F_white"]
margin_left = 12.0
margin_right = 24.0
margin_bottom = 20.0

[node name="terminais" type="Node" parent="."]

[node name="term1GB" type="ColorRect" parent="terminais"]
margin_left = 297.0
margin_top = 115.0
margin_right = 340.0
margin_bottom = 145.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="1GB" type="Button" parent="terminais/term1GB"]
margin_left = 2.0
margin_top = 5.0
margin_right = 41.0
margin_bottom = 25.0
text = "1GB"

[node name="term500" type="ColorRect" parent="terminais"]
margin_left = 294.0
margin_top = 180.0
margin_right = 340.0
margin_bottom = 210.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="500" type="Button" parent="terminais/term500"]
margin_left = 4.0
margin_top = 5.0
margin_right = 25.0
margin_bottom = 25.0
text = "500"

[node name="term 200" type="ColorRect" parent="terminais"]
margin_left = 299.0
margin_top = 245.0
margin_right = 340.0
margin_bottom = 275.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="300" type="Button" parent="terminais/term 200"]
margin_left = 3.0
margin_top = 5.0
margin_right = 39.0
margin_bottom = 25.0
text = "300"

[node name="term400" type="ColorRect" parent="terminais"]
margin_left = 294.0
margin_top = 310.0
margin_right = 340.0
margin_bottom = 340.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="400" type="Button" parent="terminais/term400"]
margin_left = 4.0
margin_top = 5.0
margin_right = 25.0
margin_bottom = 25.0
text = "400"

[node name="term100" type="ColorRect" parent="terminais"]
margin_left = 296.0
margin_top = 375.0
margin_right = 340.0
margin_bottom = 405.0
color = Color( 0.580392, 0.580392, 0.580392, 1 )

[node name="100" type="Button" parent="terminais/term100"]
margin_left = 4.0
margin_top = 5.0
margin_right = 25.0
margin_bottom = 25.0
text = "200"

[node name="Again" type="Node" parent="."]

[node name="AgainFundo" type="ColorRect" parent="Again"]
visible = false
margin_left = 21.0
margin_top = 156.0
margin_right = 339.0
margin_bottom = 267.0

[node name="AgainText" type="Label" parent="Again"]
visible = false
margin_left = 111.0
margin_top = 165.0
margin_right = 261.0
margin_bottom = 192.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Tentar novamente?"

[node name="AgainButton" type="Button" parent="Again"]
visible = false
margin_left = 108.0
margin_top = 201.0
margin_right = 240.0
margin_bottom = 237.0
text = "Sim"

[connection signal="pressed" from="Fios/F_red/Red" to="." method="_on_Red_pressed"]
[connection signal="pressed" from="Fios/F_yellow/Yellow" to="." method="_on_Yellow_pressed"]
[connection signal="pressed" from="Fios/F_blue/Blue" to="." method="_on_Blue_pressed"]
[connection signal="pressed" from="Fios/F_white/White" to="." method="_on_White_pressed"]
[connection signal="pressed" from="terminais/term1GB/1GB" to="." method="_on_1GB_pressed"]
[connection signal="pressed" from="terminais/term500/500" to="." method="_on_500_pressed"]
[connection signal="pressed" from="terminais/term 200/300" to="." method="_on_300_pressed"]
[connection signal="pressed" from="terminais/term400/400" to="." method="_on_400_pressed"]
[connection signal="pressed" from="terminais/term100/100" to="." method="_on_100_pressed"]
[connection signal="pressed" from="Again/AgainButton" to="." method="_on_AgainButton_pressed"]
